# chat-my-doc-app

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  README_INTEGRATION.md  main.py  pyproject.toml
.github/workflows/: cd.yaml  ci.yaml  ci.yml
src/app/: main.py  memory.py
src/chat_my_doc_app/: app.py  chats.py  config.py  custom_llm.py  db.py  llms.py  qdrant_service.py  rag.py
src/chat_my_doc_app/config/: config.yaml
src/notebooks/: data_loading.ipynb  qdrant.ipynb  tuto_rag.ipynb
tests/: conftest.py  test_chats.py  test_chats_simple.py  test_llms.py  test_main.py
tests/app/: test_main.py
tests/chat_my_doc_app/: test_chats.py  test_llms.py  test_main.py
tests/demo/: demo_app.py  demo_workflow.py
tests/integration/: README.md  test_app.py  test_db.py  test_qdrant.py  test_rag.py
tests/unit/: test_app.py  test_chats.py  test_llms.py  test_rag.py
tests/unit/chat_my_doc_app/: test_app.py  test_chats.py  test_llms.py  test_rag.py
